Wed Aug 20 14:47:38 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* pager.h: Doc fix.

Thu Feb  6 12:01:36 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* pagemap.c (_pager_pagemap_resize): Return errors.
	* offer-page.c (pager_offer_page): Rewrite for clarity.
	Deal with _pager_pagemap_resize failing.
	* data-request.c (_pager_seqnos_memory_object_data_request): Deal
	with _pager_pagemap_resize failing.
	* lock-object.c (_pager_lock_object): Likewise.
	* mark-error.c (pager_get_error): Likewise.
	* priv.h (_pager_pagemap_resize): Returns an error_t.

Mon Jan 20 16:25:39 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* pager-memcpy.c (pager_memcpy): `preempter' -> `preemptor'.

Thu Sep 12 16:21:14 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libpager.so): Delete special depedency.

Tue Aug 13 10:47:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* object-terminate.c (_pager_free_structure): Don't bother calling
	mach_port_deallocate if the cells are already null; set the cells
	to null after the deallocation is done.
	(_pager_seqnos_memory_object_terminate): Destroy the rights passed
	in for control and name.

Thu May  9 11:10:11 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pager-create.c: Get rid of link warning.

	* pager-create.c (pager_create): ports_allocate_port ->
 	ports_create_port; if we get an error return a null structure.

Thu May  2 11:17:17 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* offer-page.c (pager_offer_page): Make sure we hold lock across
 	operation.  Also set incore bit when operation is complete.

Tue Apr 30 12:40:33 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* lock-object.c (_pager_lock_object): Eliminate spurious extra
 	lock acquisition around pagemap frobbing.

Sun Apr 28 15:46:12 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* pager-create.c (pager_create): Add link warning.
